namespace CryptoArbitrage.Engine.DesignPatterns.Structural.Facade;

public class TradeAuditService
{
    public void Record(string executionId, string details)
    {
        _ = executionId;
        _ = details;
    }
}
